# app/api-node/src/resources/ISessionResource.ts
@@ -1,0 +1,7 @@
+import { IGameResource } from "./IGameResource";
+import { IContextBotResource } from "./IContextBotResource";
+
+export abstract class ISessionResource {
+    game?: IGameResource;
+    list?: Array<IContextBotResource>;
+}
